--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PYTHONPATH: ${{ github.workspace }}/fitness-app/src
+      PYTHONPATH: ${{ github.workspace }}/fitness-app
 
     steps:
       - name: Checkout Repository
