--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Flake8 Style Check
         run: |
-          flake8 fitness-app --count --show-source --statistics
+          python -m flake8 fitness-app --count --show-source --statistics
 
       - name: Run Tests
         run: python -m unittest discover -s fitness-app/test
