--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt || echo "No requirements.txt found"
+          python -m pip install -r requirements.txt || echo "No requirements.txt found"
 
       - name: Run Flake8 Style Check
         run: |
