--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,7 +1,7 @@
-name: Generate Changelog
+name: Generate and Commit Changelog
 
 on:
-  workflow_dispatch:  # Только ручной запуск для тестов
+  workflow_dispatch:  # Ручной запуск для тестов
 
 jobs:
   build:
@@ -18,21 +18,25 @@ jobs:
           configuration: |
             categories:
               - title: "All Changes"
-                labels: ["*"]  # Все PR, даже без меток
+                labels: ["*"]
+            issuesWoLabels: true  # Включает PR без меток
 
-      - name: Debug files
+      - name: Check if file exists
+        id: check_file
         run: |
-          ls -la
           if [ -f "CHANGELOG.md" ]; then
-            echo "=== FILE CONTENT ==="
-            cat CHANGELOG.md
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "❌ Файл не создан! Проверьте теги/PR."
+            exit 1
           fi
 
-      - name: Commit to main
-        if: success()
+      - name: Commit and Push
+        if: steps.check_file.outputs.exists == 'true'
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
-          git commit -m "Add CHANGELOG.md"
-          git push origin main
+          git commit -m "Update CHANGELOG.md"
+          git push
