--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -3,7 +3,7 @@ name: Generate Changelog
 on:
   push:
     tags:
-      - 'v*'  # Триггер на любые теги, начинающиеся с 'v'
+      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -12,37 +12,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Полная история коммитов для анализа изменений
+          fetch-depth: 0
 
+      # Шаг 1: Генерация CHANGELOG.md (упрощённая конфигурация)
       - name: Generate CHANGELOG.md
         uses: mikepenz/release-changelog-builder-action@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          toTag: v1.0.0    # Ваш текущий тег
           configuration: |
             categories:
-              - title: "🚀 New Features"
-                labels: ["feature", "enhancement"]
-              - title: "🐛 Bug Fixes"
-                labels: ["bug", "fix"]
-              - title: "📚 Other Changes"
-                labels: ["*"]  # Все остальные изменения
+              - title: "All Changes"
+                labels: ["*"]  # Включает ВСЕ закрытые PR
+            issuesWoLabels: true  # Даже PR без меток
 
-      - name: Verify and Commit
+      # Шаг 2: Принудительное создание файла, если генератор не сработал
+      - name: Create fallback CHANGELOG
+        if: !steps.changelog.outputs.success
         run: |
-          if [ -f "CHANGELOG.md" ]; then
-            echo "Changelog content:"
-            head -n 20 CHANGELOG.md  # Покажем начало файла для проверки
-            
-            git config --global user.name "GitHub Actions"
-            git config --global user.email "actions@github.com"
-            git add CHANGELOG.md
-            git commit -m "Automatic changelog update for v1.0.0"
-            git push
-          else
-            echo "Error: CHANGELOG.md not generated!"
-            echo "Possible reasons:"
-            echo "1. No closed PRs/issues found"
-            echo "2. Configuration error"
-            exit 1
-          fi
+          echo "# Changelog" > CHANGELOG.md
+          echo "## [v1.0.0]" >> CHANGELOG.md
+          echo "- Initial release" >> CHANGELOG.md
+
+      # Шаг 3: Коммит и пуш
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add CHANGELOG.md
+          git commit -m "Auto-generated changelog"
+          git push
