--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,6 +6,9 @@ on:
       - 'v*'
   workflow_dispatch:
 
+permissions:  # Явно задаем необходимые права
+  contents: write  # Даем разрешение на запись
+
 jobs:
   generate_changelog:
     runs-on: ubuntu-latest
@@ -15,41 +18,25 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      # Шаг 1: Генерация CHANGELOG.md с гарантированным созданием файла
-      - name: Generate CHANGELOG.md
-        id: generate
+      - name: Create CHANGELOG.md
         run: |
-          # Попытка генерации через action
-          echo "Trying to generate changelog..."
           echo "# Changelog" > CHANGELOG.md
           echo "## [Unreleased]" >> CHANGELOG.md
-          echo "- Initial changelog setup" >> CHANGELOG.md
-          
-          # Альтернативная генерация (если основной action не сработал)
-          if [ -f "CHANGELOG.md" ]; then
-            echo "CHANGELOG.md created successfully"
-            echo "success=true" >> $GITHUB_OUTPUT
-          else
-            echo "Fallback: Creating empty changelog"
-            echo "# Changelog" > CHANGELOG.md
-            echo "## [Unreleased]" >> CHANGELOG.md
-            echo "No changes yet" >> CHANGELOG.md
-            echo "success=true" >> $GITHUB_OUTPUT
-          fi
+          echo "- Initial version" >> CHANGELOG.md
 
-      # Шаг 2: Проверка содержимого файла
-      - name: Verify CHANGELOG.md
-        run: |
-          echo "CHANGELOG content:"
-          cat CHANGELOG.md
-          echo ""
-          echo "File exists: $(ls -la CHANGELOG.md)"
-
-      # Шаг 3: Коммит и пуш
       - name: Commit and Push
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add CHANGELOG.md
-          git commit -m "Automatic changelog update [skip ci]"
-          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { execSync } = require('child_process');
+            try {
+              execSync('git config --global user.name "GitHub Actions"');
+              execSync('git config --global user.email "actions@github.com"');
+              execSync('git add CHANGELOG.md');
+              execSync('git commit -m "Add CHANGELOG.md"');
+              execSync(`git push https://${process.env.GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${process.env.GITHUB_REPOSITORY}.git HEAD:main`);
+              console.log('CHANGELOG.md successfully pushed');
+            } catch (error) {
+              console.error('Error:', error.message);
+              core.setFailed('Failed to push changes');
+            }
